Fix header content overflowing on smaller mobile screen

--- a/src/css-modules/header.css
+++ b/src/css-modules/header.css
@@ -17,6 +17,7 @@ header {
 
   height: 100vh;
   height: 100dvh;
+  min-height: min-content;
   padding: var(--page-padding);
 
   position: relative;
@@ -56,7 +57,13 @@ header img {
   z-index: 2;
 
   width: 100%;
-  height: 100%;
+
+  /* make the height 0 to not affect the layout (row height), 
+  and force min-height to100% to take the row height
+  see: https://stackoverflow.com/questions/63726048/prevent-image-from-being-used-to-calculate-grid-row-height */
+  height: 0;
+  min-height: 100%;
+
   object-fit: cover;
   box-shadow: var(--box-shadow-darker);
 }
